# farms

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  ci-cd.md  feature_request.md
.github/workflows/: audit.yml  build-deploy.yml  build-image.yml  general.yml  migrate_render.yaml.yml  render-db-refresh.yml  render.yml
.sqlx/: query-00fe4fb139b966d4d026ca8b56680c087a1e67705f0a6efb9c7eff6f4f80c0be.json  query-049636dbdc7a40d126c1875bc28181d098f030c086c4e4a63ad177f19cf978fe.json  query-05103db941ff8e2fd68415962ce82ffe6e702aea5b84e0dab0ef4d41b3c6fad7.json  query-09abaedf617d6173c56efe639b71cd2636bc71e8c18b21ad708cc7c58616d4af.json  query-0c52d44fc1f40c80d7266c543c407cf93ae92b4fdcc2b58a3828f94d02b7a8da.json  query-0ee3b11ba8a023d24767ffd70be703bc47de1bd0199126c560ba84e784f1fbc0.json  query-0ee4f7a706eaa4ccb836f90d596bd30ce3d0f6da4c9e27cd48bfc9505af26253.json  query-1275501ced8b789323271ead0405347fa2aa7f29d76bde036c271bffc92ff2ca.json  query-14dfabdcec903ea049524389e8103adf45b9e5641f9f1614b165afb83c88df6e.json  query-16778acffdf8091d05d1d7e1370e23dd8c8ec90125ee4bb6d68beeac095bfea1.json  query-18e6ec4a870bcd4359380897de3bf9346585802ef5b64204dfe1409b4cb69ace.json  query-1f2a47a6b88bdce7ee4304654cdbbde5be919eec9b4aa191eb131fd9d52ca3bf.json  query-22f4fb2f68cc31b8dd0cc2ce18d3193a965e6d959dba73a0e1255dbd9db87d45.json  query-279a9d501db8de69c31bcf4b33695e7339c63b3831006ac76f0411e8341bf1aa.json  query-28adbb16a5497e21af10e68d644b2d38edc2561b5ae87db11ee9fed67295cb09.json  query-2a06135219225b3caff78c93cbc54088880092c51d29353ea71cdf61773fce02.json  query-2b10e732a1e55471f25ed5feed313164d4e6d5e5d6e8d4756bf5053e6da092cd.json  query-3103661c9e2a47ace841bcbf0ee440d8013cb53ffc9e396b26d5d5ebd947b809.json  query-367f33ea645b264a1fcfb1f5728ea74dde0f1c1dae48e3dc6e07cdb4dfed3c40.json  query-37448ebeb89856b53728e918dab2a092cabc44f5f2b05ad0b1a0ad20c3ba3b00.json  query-3beb02cb2bca6922c62aa28838979ef80d3b6ab98b4a84444183b2c04ad588fd.json  query-3f1daef25f03de6c8047d1d73e97bb9c27b866de72074cf433aa523057feefff.json  query-3f3f42b8eba5483b69c4121c2217b034deda99f5fb767db0b7eb206dcb87f646.json  query-41e42d859989ea66145c81ee0cdcf3061f277449abeea55632e952f3d8c9366b.json  query-443c57b8f0950ddd8a8027c70629433ff8d78fb6d0c8c73088e2735a96ff650b.json  query-4564e2e9ba7c0db92c469014ca835a940a3715ca55cd7662101687289c32536a.json  query-46ea46105fc94a08460290d5d196ebede896d0d0b11a435fd4792bb5a1d13bd5.json  query-4fafed238cf1958bad3e33d6323ea536bb9ef4650a467f06de3ebac8300dbf75.json  query-504b877b99ed876d6ece1fdb65844de1d2bcff293498614095eef4792eb8fdfa.json  query-507d0b35a7f63ae5fa6db00fa57fcf9d3ecf35e3f721b2c82cc3b14127fad934.json  query-53ef7338f859da3064b70ba60369762f0c4105394ba0aa66dec997f5eb50fdf3.json  query-59bca22c22ff5b78e4b77f5254b631ba29b642445974fb40d8bbaf83eeebc1ed.json  query-5d07fd76289a43db852858a2aff9898cbab6bba7dea0b90e625a4936a78e0cbf.json  query-602ad075ee3f1b87e6195735e0e46e4a502b2873fc2006035ee482c2fa6f0d4c.json  query-61bffcff5bfd3a6021d8c270415648a246ff01acf5e3980ada8f81c3c294f534.json  query-658c3844e94f907099bcf4438d28c10d227990a0a51bd23142857db4582e2806.json  query-693610551c19085044c4a586ea2bfc3e412d92b2ac15727c657c95bcbce85175.json  query-6a4b1e3e1d8eace2261d2f91fa78252aa567309081c894163c58114d15d0613b.json  query-6c16d568767e8880f03527351228b903ddd1e6c0819a77cb931f18212c19c784.json  query-6c29810c21ddbd9f02ed76ba6a2ae6ee2e84a87e7bb52118703062dd2ebcfe42.json  (+43 more)
api_docs/: Admin - Approve Product Suggestion.bru  Admin - List Product Suggestions.bru  Admin - Reject Product Suggestion.bru  Create Farm.bru  Get All Farms.bru  Get Current User.bru  Get Farm.bru  Health Check.bru  Login.bru  Logout.bru  Register.bru  Submit Product Suggestion.bru  Verify Email.bru  bruno.json
api_docs/environments/: render.bru
configuration/: base.yaml  local.yaml  production.yaml
data/: farms_with_categorized_products.patched.json
docs/: frontend-backend-gaps.md  products-and-moderation-implementation-plan.md  subcategories-backend-implementation.md  user-registration-implementation-plan.md
migrations/: 20250424231549_create_farms_table.sql  20251209223944_create_users_table.sql  20260114094235_create_idempotency_table.sql  20260630115043_create_product_taxonomy.sql  20260701090000_create_farm_product_suggestions.sql  20260701090100_add_farm_product_status.sql  20260714215011_create_farm_categories.sql  20260715015936_unique_pending_suggestion.sql
otel/: docker-compose.yaml  grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml
scripts/: create_app_role.sql  import_farms_from_json.py  init_db.sh  init_redis.sh  prune_db.sql  refresh_render.py  render_db_migrate.py  render_shared_functions.py  seed_products.py
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: admin.rs  credentials.rs  email_verification.rs  extractor.rs  mod.rs  password.rs  registration.rs  session.rs
src/domain/: address.rs  canton.rs  categories.rs  coordinates.rs  farm_name.rs  macros.rs  mod.rs  name.rs  point.rs  suggestion.rs  test_data.rs
src/domain/farm/: address.rs  canton.rs  categories.rs  mod.rs  name.rs  point.rs  product_slug.rs  stock_status.rs
src/domain/user/: email.rs  mod.rs  password.rs  role.rs  status.rs  username.rs
src/idempotency/: error.rs  idempotency_data.rs  key.rs  mod.rs  persistence.rs  postgres_cleanup_worker.rs
src/idempotency/persistence/: error.rs  mod.rs  postgres.rs  redis.rs
src/rate_limit/: mod.rs
src/routes/: farms.rs  mod.rs
src/routes/admin/: error.rs  mod.rs  suggestions.rs
src/routes/authentication/: error.rs  login.rs  logout.rs  me.rs  mod.rs  register.rs  (+1 more)
src/taxonomy/: mod.rs
tests/: health_check.rs
tests/api/: authentication.rs  directory.rs  farms.rs  health_check.rs  helpers.rs  main.rs  me.rs  moderation.rs  products.rs  registration.rs  suggestions.rs
tests/authentication/: credentials.rs  main.rs
tests/common/: mod.rs
(+7 files in other folders)
