[package]
name = "farms"
version = "0.3.0"
authors = ["Pedro Galveias <pedro.r.galveias@pm.me>", "Pedro Moleiro <pedro.r.p.moleiro@outlook.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "farms"

[features]
default = []
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
# Web framework
actix-web = "4.14"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

# Databases
redis = { version = "1.4", features = [
    "tokio-rustls-comp",
    "connection-manager"
] }
deadpool-redis = { version = "0.22", features = ["serde", "rt_tokio_1"] }
actix-session = { version = "0.11", features = [
    "redis-session",
    "redis-session-rustls",
    "redis-pool",
] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

# Configuration and serialization
config = { version = "0.15", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.7"
rmp-serde = "1.3"
unicode-segmentation = "1.13"

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = ">=0.3.23", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = ">=0.7.22"

# OpenTelemetry (optional)
opentelemetry = { version = "0.32", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace", "metrics", "internal-logs",
    "grpc-tonic", "tls-ring", "tls-roots",
    "http-proto", "reqwest-blocking-client", "reqwest-rustls"
], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
rand = "0.10"
argon2 = { version = "0.5", features = ["std"] }

# HTTP client for the email provider (rustls to match the rest of the stack).
# Also used by the integration tests, hence the `cookies` feature.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "cookies",
    "rustls"
] }
sha2 = "0.11"      # SHA-256 for verification token hashing
hex = "0.4"        # hex-encode token hashes for storage
validator = "0.20" # email validation (maintained crate, no handwritten regex)

[dev-dependencies]
once_cell = "1"
fake = "5.1"
claims = "0.8"
wiremock = "0.6" # mock the email provider's HTTP API in tests

